style.css
/* ... */
.switch2-1,
.switch4-1,
.switch6-1,
.switch8-1,
.switch4fan1-1 {
  top: 22px;
}

.switch2 {
  width: 30px;
  height: 30px;
  border: 2px solid rgb(12, 154, 193);
  border-radius: 16px;
  position: relative;
}

.rmenu-item-i img {
  height: 50px;
  width: 50px;
  object-fit: contain;
}

.switch2Image {
  width: 30px;
  height: 30px;
  /* background: url(./icon/Icons80x80px/general\ switch.png); */
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.switch2ImageFan {
  width: 30px;
  height: 30px;
  background: url(./icon/Icons80x80px/Fan/Fan\ Default.png);
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.switch2ImageDimmer {
  width: 30px;
  height: 100px;
  background: url(./icon/Icons80x80px/Dimmer/Dimmer\ Default.png);
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.backgroundNone {
  width: 30px;
  height: 30px;
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.switch2 img {
  width: 35px;
  height: 35px;
}

.switch4fan1{
  height: 146px;
  width: 270px;
  position: relative;
}

.switch4 {
  height: 146px;
  /* height: 22.52vh; */
  width: 170px;
  /* width: 22.578vw;
  height: 22.376vh; */
  position: relative;
}

.switch4-1,
.switch4-2 {
  left: 30px;
}

.switch4-3,
.switch4-4 {
  left: 110px;
}

.switch4-3,
.switch6-3,
.switch8-3,
.switch4fan1-3 {
  top: -38px;
}

.switch4-4,
.switch6-4,
.switch8-4,
.switch4fan1-4 {
  top: 8px;
}




.curtain {
  height: 145px;
  width: 140px;
  /* height: 22.376vh; */
  /* width: 10.937vw; */
  background-image: url(./icon/m2/Curtain.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.pin-3-socket-amp {
  height: 145px;
  /* height: 22.376vh; */
  width: 140px;
  /* width: 10.937vw; */
  background-image: url(./icon/m2/3PinSocket.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.socket-6-amp {
  height: 145px;
  /* height: 22.376vh; */
  width: 140px;
  /* width: 10.937vw; */
  background-image: url(./icon/m2/6AMPSocket.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.socket-16-amp {
  height: 145px;
  width: 140px;
  /* height: 22.376vh;
  width: 10.937vw; */
  background-image: url(./icon/m2/16AMPSocket.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.bell {
  height: 145px;
  width: 140px;
  /* height: 22.376vh;
  width: 10.937vw; */
  background-image: url(./icon/m2/Bell.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.Switch4-fan1 {
  /* width: 289px;
  height: 145px; */
  width: 22.578vw;
  height: 22.376vh;
  background-image: url(./icon/m4/4Switch1Fan.png);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.dimmeIncr {
  width: 30px;
  height: 30px;
  background: url(./icon/m2/increase.png);
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.dimmeDecr {
  width: 30px;
  height: 30px;
  background: url(./icon/m2/decrease.png);
  border-radius: 16px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.indicator {
  width: 15px;
  height: 15px;
  /* background: url(./icon/m2/indicator.png); */
  background: #fff;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin-inline: auto;
}

.a-pin {
  width: 40px;
  height: 20px;
  /* background: url(./icon/m2/a.png); */
  border: 1px solid #fff;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin-inline: auto;
}

.c-pin {
  width: 40px;
  height: 20px;
  /* background: url(./icon/m2/c.png); */
  border: 1px solid #fff;
  border-radius: 10px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin-inline: auto;
}

.type-b {
  width: 40px;
  height: 17px;
  background: url(./icon/m2/Type\ b.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin-inline: auto;
}

.type-c {
  width: 40px;
  height: 18px;
  background: url(./icon/m2/type\ c.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin-inline: auto;
}

.sceneController {
  width: 30px;
  height: 30px;
  /* background: url(./icon/m2/scene\ controller.png); */
  border: 2px solid rgb(12, 154, 193);
  border-radius: 6px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.sceneController img {
  width: 100%;
}

.switch6-1,
.switch6-2 {
  left: 20px;
}

.switch6-3,
.switch6-4 {
  left: 120px;
}

.switch6-5,
.switch6-6 {
  left: 212px;
}

.switch6-5,
.switch8-5 {
  top: -98px;
}

.switch6-6,
.switch8-6 {
  top: -52px;
}

.switch8 {
  /* width: 33.906vw; */
  width: 432px;
  height: 146px;
  /* height: 22.376vh; */
  position: relative;
}

.switch6fan1 {
  display: grid;
  align-items: center;
  grid-template-areas:
    "s1 s3 s5 . s8"
    ". . . f1 s8"
    "s2 s4 s6 . s8";
  /* width: 600px; */
  width: 432px;
  height: 146px;
  position: relative;
}

.switch6fan1>* {
  margin-inline: auto;
}

.switch6fan1-1 {
  grid-area: s1;
}

.switch6fan1-2 {
  grid-area: s2;
}

.switch6fan1-3 {
  grid-area: s3;
}
/* ... */

